--- a/Framework/packages.config
+++ b/Framework/packages.config
@@ -8,4 +8,5 @@
   <package id="SharpDX.DirectInput" version="4.0.1" targetFramework="net45" />
   <package id="SharpDX.DXGI" version="4.0.1" targetFramework="net45" />
   <package id="SharpDX.Mathematics" version="4.0.1" targetFramework="net45" />
+  <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net45" />
 </packages>
